wip: Settings Implementation
