# src/PoopNPour.Api/swagger.json
@@ -66,6 +66,59 @@
         }
       }
     },
+    "/api/settings/system": {
+      "get": {
+        "tags": [
+          "Settings"
+        ],
+        "summary": "Get system settings",
+        "description": "Retrieve current system settings",
+        "operationId": "GetSystemSettings",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Settings"
+        ],
+        "summary": "Update system settings",
+        "description": "Update system settings",
+        "operationId": "UpdateSystemSettings",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateSystemSettingsCommand"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
     "/api/users": {
       "get": {
         "tags": [
@@ -257,6 +310,16 @@
           },
           "email": {
             "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "UpdateSystemSettingsCommand": {
+        "type": "object",
+        "properties": {
+          "setupCompleted": {
+            "type": "boolean",
             "nullable": true
           }
         },
