# src/PoopNPour.Application/Settings/Models/SystemSettingsDto.cs
@@ -1,0 +1,6 @@
+namespace PoopNPour.Application.Settings.Models;
+
+public class SystemSettingsDto
+{
+    public bool SetupCompleted { get; set; }
+}
