# src/PoopNPour.Domain/Models/Settings/SystemSettings.cs
@@ -1,0 +1,8 @@
+using PoopNPour.Domain.Interfaces.Settings;
+
+namespace PoopNPour.Domain.Models.Settings;
+
+public class SystemSettings : ISettings
+{
+    public bool SetupCompleted { get; set; }
+}
