# src/PoopNPour.Infrastructure/Data/ApplicationDbContext.cs
@@ -1,6 +1,7 @@
 using Microsoft.AspNetCore.Identity.EntityFrameworkCore;
 using Microsoft.EntityFrameworkCore;
 using PoopNPour.Domain.Common.Identity;
+using PoopNPour.Domain.Entities;
 
 namespace PoopNPour.Infrastructure.Data;
 
@@ -10,6 +11,8 @@ public class ApplicationDbContext : IdentityDbContext<ApplicationUser>
         : base(options)
     {
     }
+
+    public DbSet<Setting> Settings { get; set; }
 
     protected override void OnModelCreating(ModelBuilder modelBuilder)
     {
